Anchor ID moment van de toets verplaatst

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -37,8 +37,8 @@ MASTERPLAN DIGITAAL TOETSEN
 ------- [_] Final check (+ waaronder: tentamen moet op synchroon staan, how to preview the exam)
 ------- [_] Twijfel? NEEM CONTACT OP!!!##
 --------------------------------------------------------------------------------------------------------
-[_] FAQ moment van toets:
---- [_] Anchor ID iets hoger plaatsen per item zodat tekstvakje iets lager zit in scherm
+[X] FAQ moment van toets:
+--- [X] Anchor ID iets hoger plaatsen per item zodat tekstvakje iets lager zit in scherm
 --------------------------------------------------------------------------------------------------------
 [_] Assessment:
 --- [_] Beoordelen (mini toevoeging ergens aan de zijkant/"can't see this menu achtig"-> Geen toegang? Beoordelaars doorgeven per mail aan icto-csw@uva.nl)
