Inspection; twee vragen toegevoegd + in extensive instructies verwezen naar nieuwe inspectie pagina

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -20,8 +20,8 @@ MASTERPLAN DIGITAAL TOETSEN
 --------------------------------------------------------------------------------------------------------
 [_] Uitgebreide instructie (oude instructie):
 --- [_] Stap 1: Design -> weghalen
---- [_] Stap 4: Moment of examination -> vervangen voor link naar huidige FAQ instructie
---- [_] Stap 6: Inzage -> vervangen voor link naar nieuwe FAQ inzage instructie
+--- [X] Stap 4: Moment of examination -> vervangen voor link naar huidige FAQ instructie
+--- [X] Stap 6: Inzage -> vervangen voor link naar nieuwe FAQ inzage instructie
 --------------------------------------------------------------------------------------------------------
 [_] Vragen+Toets:
 --- [_] Modifying questions
