--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
@@ -42,8 +42,11 @@ https://canvas.uva.nl/courses/8175/pages/inspection
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T2">How do I book an inspection with technical support?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T3">I missed the deadline for booking an inspection with technical support. What now?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T4">How do I book an inspection without technical support?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T5">How do students log in on TestVision to do the inspection?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T6">I would like to do the inspection offline. How do I print a test for an inspection?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T5">How do I add an answer model for my students to see during an inspection?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T6">How do students log in on TestVision to do the inspection?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T7">How do I discuss any comments of students?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T8">How do I download students' comments in TestVision?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T9">I would like to do the inspection offline. How do I print a test for an inspection?</a></span></p>
             <br>
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ Students</em>  <i class="icon-document"></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students" target=_blank>Share this page with students</a></span></p>
@@ -126,6 +129,20 @@ https://canvas.uva.nl/courses/8175/pages/inspection
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do I add an answer model for my students to see during an inspection?</strong></h4>
+      <p style="text-align: center;">For inspection, it is important to ask yourself whether an answer model is needed for students. If, for example, you have created an exam with a number of open questions, it is useful for students to see during the inspection how the assessment is done.
+        <br><br>You are completely free to decide what the answer model may look like. The ICTO team asks you to do two things: (1) Please save the answer model in PDF format, and (2) email the PDF file to <a href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a> at least 3 days before the inspection.
+        <br><br>If you have done so, we will make sure the answer model is included in the inspection. This way students can open the answer model on their computer or laptop during the inspection. If it is not convenient for you to deliver the answer model before this deadline, you can still take it with you on USB or print it out for inspection!
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ teachers 6 -->
+  <p><a id="FAQ_T6"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
       <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do students log in on TestVision to do the inspection?</strong></h4>
       <p style="text-align: center;">On <a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students">the following page</a>, which you can share with your students, an FAQ for students about digital exams can be found. It also states how students can log in on TestVision for the inspection.
       </p>
@@ -134,8 +151,38 @@ https://canvas.uva.nl/courses/8175/pages/inspection
   </div>
 
 
-  <!-- FAQ teachers 6 -->
-  <p><a id="FAQ_T6"></a></p>
+  <!-- FAQ teachers 7 -->
+  <p><a id="FAQ_T7"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do I discuss any comments of students?</strong></h4>
+      <p style="text-align: center;">
+        It is important to ask yourself whether you would like students to enter any comments they might have in TestVision. It is also possible for you to discuss any questions or comments with students on the spot.
+        During an inspection, the option to enter comments is turned off by default. This way, a teacher is not overloaded with questions and comments from students. A big advantage of turning the option on, however, is that a teacher is then able to download all comments from TestVision.
+        <br><br>Please send an email to <a href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a> if you'd like to make use of this option.
+        <br><br><i class="icon-question"></i> <a href="#FAQ_T6">How do I download students' comments in TestVision?</a>
+
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ teachers 8 -->
+  <p><a id="FAQ_T8"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do I download students' comments in TestVision?</strong></h4>
+      <p style="text-align: center;">To download students' comments go to <u><b>Sessions</b></u> in TestVision and select the relevant folder. On the right side of the test, select <u><b>Results</b></u>. At the top of the test page, you can go to <u><b>Downloads</b></u>, after which you should click 'Comments by candidates as XML (Excel)'
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+
+  <!-- FAQ teachers 9 -->
+  <p><a id="FAQ_T9"></a></p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
