aanpassingen studiepagina CCSci

--- a/CCSi/Homepage_Studiepagina.html
+++ b/CCSi/Homepage_Studiepagina.html
@@ -28,6 +28,16 @@
     </ul>
 
     <div id="About" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
+        <p><strong>Dear CSSci student, </strong></p>
+        <p><strong>Welcome to the Computational Social Science programme page on Canvas. </strong></p>
+        <p><strong>Via this page you will be informed on relevant information connected to the Computational Social Science programme. </strong></p>
+        <p><strong>Have a look at the Modules and meet the CSSci team, see what&rsquo;s coming up in the next Tuesdays at the Attic session and find useful resources for you as a CSSci student.</strong><strong></strong></p>
+        <p><strong>Please note that course specific information can be found in the connected course page on Canvas. </strong></p>
+        <p><strong>Best,</strong></p>
+        <p><strong>the CSSci Team</strong></p>
+
+        <hr style="height: 1px; border: none; color: #333; background-color: #333; margin-top: 18px; margin-bottom: 25px;" />
+
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://canvas.uva.nl/courses/34505/pages/tuesday-september-20th?module_item_id=1417953">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Tuesday September 20th</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Hereby you are all invited to our very first ‘Tuesday at the Attic’. Every first and third Tuesday of the month we will reside at the attic of ‘Het Limmickhof’, one of the buildings part of the ‘Amstelhoven’.</em></span>
