TestVision HTML plannen punten toegevoegd

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -50,6 +50,8 @@ MASTERPLAN DIGITAAL TOETSEN
 ------- [_] Optioneel: Hoe maak je een export? (+ Import naar Canvas)
 --------------------------------------------------------------------------------------------------------
 [X] Inzage:
+--- [_] Info over de inzage instellingen (wat is standaard; en stel je wilt antwoordmodel zichtbaar hebben -> mail naar ICTO)
+--- [_] Iets meer informerend naar docenten wat ze kunnen verwachten tijdens inzage (misschien "How do I book" veranderen naar "About" bij met en zonder technical support)
 --- [X] Voor design: kijk naar onze oude instructie, moet ongeveer dezelfde inhoud bevatten maar wel hetzelfde design als de FAQ toetsmoment
 --- [X] Plus nieuw item toevoegen: overzicht verschil tussen ingeboekte inzage & geen geboekte Inzage
 ------- [X] Verschillende levels of inzages met beschrijving voordelen/nadelen, denk aan schema die op de OPC informatie pagina in sharepoint staat
