update fbf newsletter

--- a/Nieuwsbrief/Conceptversie2.html
+++ b/Nieuwsbrief/Conceptversie2.html
@@ -290,8 +290,7 @@
                 <p style="font-size: 12pt"><b>What is it?</b>
                 <br>Increase student engagement by adding in-line questions or discussion threads to specific videos and also decide which ones are compulsory to answer before proceeding to the next. By using this feature, students can watch informative videos, answer your questions, <i>and</i> contribute to the discussion threads.</p>
                 <p style="font-size: 12pt"><b>Why use it?</b>
-                <br>A great benefit of (online) teaching is the use of multimedia materials to increase engagement, especially video recordings. However, students are often passively consuming the recorded material assigned outside of class, thus coming to lectures unprepared, and teachers have to explain the content again. By adding questions or discussion prompts to these videos students’ engagement increases, and it ensures a deeper understanding of the course content.
-                <br><br>A great advantage for you as a teacher is that this feature is very accessible and easy to use, as it only requires you to add the questions or discussion prompts.</p>
+                <br>A great benefit of (online) teaching is the use of multimedia materials to increase engagement, especially video recordings. However, students are often passively consuming the recorded material assigned outside of class, thus coming to lectures unprepared, and teachers have to explain the content again. By adding questions or discussion prompts to these videos students’ engagement increases, and it ensures a deeper understanding of the course content. A great advantage for you as a teacher is that this feature is very accessible and easy to use, as it only requires you to add the questions or discussion prompts.<br></p>
             </td>
 
           </tr>
@@ -305,9 +304,9 @@
             <td style="width:80%">
                 <h4><strong> Do you want more interaction during your lectures? &rarr; Interactive Presentation </strong></h4>
                 <p style="font-size: 12pt"><b>What is it?</b>
-                <br>[text]</p>
+                <br>In an interactive presentation you can upload your PowerPoint presentation and add questions or attachments. These can be multiple-choice or open questions, and you can choose at which points in the presentation you’d like to ask them. This way you can track students’ performance and participation in real-time as they answer, and you can gain insights into their understanding of certain concepts. </p>
                 <p style="font-size: 12pt"><b>Why use it?</b>
-                <br>[text]</p>
+                <br>This tool is meant to make presentations more engaging, by encouraging attentiveness and active thinking, as well as helping you to keep track of your students’ progress and level of understanding. It’s one of the few features you can actually use <b>during</b> lectures. However, it is also still possible for students to join in from home. The tool makes it easier for you to see which students actively participate and attend the lecture. Moreover, you’ll have better insights into students’ knowledge so that your lecture connects to that. One of the advantages of this tool is the option for you to export the data afterwards.<br></p>
             </td>
 
           </tr>
@@ -326,6 +325,12 @@
                   <br>[text]</p>
               </td>
 
+          </tr>
+
+          <tr>
+              <td style="width: 100%; vertical-align: top;" colspan="2">
+                  <p style="font-size: 12pt">Any questions about these or other <i>FeedbackFruits</i> features? Shoot us a message via <a href="mailto:icto-csw@uva.nl">email</a>. We'd be more than happy to help you or think along with you about all the possibilities this tool has to offer.</p>
+              </td>
           </tr>
 
       </table>
