--- a/Nieuwsbrief/Conceptversie2.html
+++ b/Nieuwsbrief/Conceptversie2.html
@@ -56,12 +56,12 @@
       <img style="margin-right: 15px; margin-top: 5px; width:30%; float:left" src="https://canvas.uva.nl/courses/8175/files/7492180/preview" alt="Final Grades support (2).png" />
 
       <p style="font-size: 12pt">Above is a selection of the questions we receive most frequently from teachers. Often, teachers only realize things are not going quite as planned right at the moment final grades need to be transferred to SIS. We understand that this might be stressful. After all, your students are waiting for their grades!
-      <br><br>This academic year, the ICTO team would like to take away a bit of this stress by simply getting ahead of that moment. <strong>Make an appointment with us via the <a href="https://outlook.office365.com/owa/calendar/ICTOSocialSciences@Amsuni.onmicrosoft.com/bookings/">booking form</a>, and we’ll sit down with you to walk you through setting up your Final Grades menu</strong>.
-      <br><br>You can make an appointment with us in which we’ll sit down with you and arrange your final grades set up and assignments. Did you have difficulty preparing the calculation set-up last year? Or did you run into some issues submitting the grades to SIS? Perhaps you just have some very complicated ideas on how you’d like to calculate the final grade. Whatever the case, we strongly encourage you to set up a meeting with us. Even more so if you have never worked with Final Grades before. A short meeting with the ICTO team will provide you with all the knowledge you need.
-      <br><br>We often hear from teachers that these kinds of meetings take away a lot of stress, and they make the process not only easier but also more enjoyable.  By doing this way ahead of time, submitting grades to SIS will be a breeze when the moment comes!
-      You can make an appointment via the link below! This can be done online or on location.</p>
+      <br><br>This academic year, the ICTO team would like to take away a bit of this stress by simply getting ahead of that moment. <strong>Make an appointment with us by selecting 'Final Grades support' via the <a href="https://outlook.office365.com/owa/calendar/ICTOSocialSciences@Amsuni.onmicrosoft.com/bookings/">booking form</a>, and we’ll sit down with you to walk you through setting up your <i>Final Grades</i> menu</strong>.
+      <br><br>Did you have difficulty preparing the calculation set-up last year? Or did you run into some issues submitting the grades to SIS? Perhaps you just have some very complicated ideas on how you’d like to calculate the final grade. Whatever the case, we strongly encourage you to set up a meeting with us. Even more so if you have never worked with <i>Final Grades</i> before. A short meeting with the ICTO team will provide you with all the knowledge you need.
+      <br><br>We often hear from teachers that these kinds of meetings take away a lot of stress, and they make the process not only easier but also more enjoyable. By doing this way ahead of time, submitting grades to SIS will be a breeze when the moment comes!
+      You can make an appointment via the link below! This can be done <b>online</b> or <b>on location</b>.</p>
 
-      <p style="font-size: 12pt;"><a class="icon-calendar-day" href="https://outlook.office365.com/owa/calendar/ICTOSocialSciences@Amsuni.onmicrosoft.com/bookings/">Make an appointment with the ICTO team by selecting 'Final Grades'</a></p>
+      <p style="font-size: 12pt;"><a class="icon-calendar-day" href="https://outlook.office365.com/owa/calendar/ICTOSocialSciences@Amsuni.onmicrosoft.com/bookings/">Make an appointment with the ICTO team by selecting 'Final Grades support'</a></p>
 
   </div>
 
@@ -74,7 +74,7 @@
 
               <td style="width:85%; vertical-align:top">
                   <h3><strong>What's new?</strong></h3>
-                  <p style="font-size: 12pt"><b>In <i>What's new?</i> you'll get all kinds of exclusive ICTO-related information. This time, you can read about <i>TestVision</i>’s new release and you’ll get the inside scoop on the UvA’s new plagiarism software: <i>Turnitin Similarity</i>! Additionally, more info is shared about the fact that older Canvas courses are being archived. Or… discover how to delay posting pages on Canvas!</p>
+                  <p style="font-size: 12pt"><b>In <i>What's new?</i> you'll get all kinds of exclusive ICTO-related information. This time, you can read about <i>TestVision</i>’s new release and you’ll get the inside scoop on the UvA’s new plagiarism software: <i>Turnitin Similarity</i>! Additionally, more info is shared about the fact that older Canvas courses are being archived. Or… discover how to schedule page publication on Canvas!</p>
               </td>
 
               <td style="width:auto%;">
