--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -68,9 +68,9 @@
     <div class="col-xs-20 col-md-12">
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
 
-            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Reviewing the exam</em>  <i class="icon-document"></i></strong></span></p></h3>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_R1">Concept question 1</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_R2">Concept question 2</a></span></p>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Grading the exam</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G1">How do I start grading?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G2">Where do I see the grades?</a></span></p>
             <br>
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Access scores and grades</em>  <i class="icon-document"></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_S1">Concept question 1</a></span></p>
