--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -69,13 +69,18 @@
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
 
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Grading the exam</em>  <i class="icon-document"></i></strong></span></p></h3>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G1">How do I start grading?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G2">Where do I see the grades?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G1">1.1. How do I grade in TestVision?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G2">1.2 Can I distribute work among multiple graders?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G3">1.3 I've finished grading. Where can I see my grades?</a></span></p>
             <br>
-            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Access scores and grades</em>  <i class="icon-document"></i></strong></span></p></h3>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_S1">Concept question 1</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_S2">Concept question 2</a></span></p>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>2. Editing and analyzing scores</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_E1">2.1 How do I mark another answer as correct in multiple choice questions?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_E2">2.2 How do I mark an entire question as correct for all students?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_E3">2.3 How do I edit scores of individual students?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_E4">2.4 Can I see an overview of how students perform per question?</a></span></p>
             <br>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>3. Exporting  grades</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_E1">3.1 How do I export grades to Canvas' Final Grades tool?</a></span></p>
         </div>
     </div>
 </div>
