--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -68,7 +68,7 @@
     <div class="col-xs-20 col-md-12">
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
 
-            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Grading the exam</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>1. Grading the exam</em>  <i class="icon-document"></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G1">1.1. How do I grade in TestVision?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G2">1.2 Can I distribute work among multiple graders?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G3">1.3 I've finished grading. Where can I see my grades?</a></span></p>
