--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -98,7 +98,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<!-- --------------------------------------- FAQ 1 --------------------------------------- -->
+<!-- --------------------------------------- FAQ 1.1 --------------------------------------- -->
 <p><a id="FAQ_G1"></a></p>
 <p>&nbsp;</p>
 
@@ -119,7 +119,7 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;">
     <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
         <tbody>
-            <!-- stap 1.1 -->
+            <!-- stap 1 -->
             <tr style="height: auto;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
                         <span style="font-size: 14pt;">1.</span>
@@ -138,7 +138,7 @@
                     <br>
                 </td>
             </tr>
-            <!-- stap 1.2 -->
+            <!-- stap 2 -->
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
                     <span style="font-size: 14pt;"><strong>2.</strong></span>
@@ -157,7 +157,7 @@
                     <br>
                 </td>
             </tr>
-            <!-- stap 1.3 -->
+            <!-- stap 3 -->
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
                     <span style="font-size: 14pt;"><strong>3.</strong></span>
@@ -202,7 +202,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<!-- --------------------------------------- FAQ 2 --------------------------------------- -->
+<!-- --------------------------------------- FAQ 1.2 --------------------------------------- -->
 <p><a id="FAQ_G2"></a></p>
 <p>&nbsp;</p>
 
@@ -223,7 +223,7 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;">
     <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
         <tbody>
-            <!-- stap 1.1 -->
+            <!-- stap 1 -->
             <tr style="height: auto;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
                         <span style="font-size: 14pt;">1.</span>
@@ -242,7 +242,7 @@
                     <br>
                 </td>
             </tr>
-            <!-- stap 1.2 -->
+            <!-- stap 2 -->
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
                     <span style="font-size: 14pt;"><strong>2.</strong></span>
@@ -261,7 +261,7 @@
                     <br>
                 </td>
             </tr>
-            <!-- stap 1.3 -->
+            <!-- stap 3 -->
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
                     <span style="font-size: 14pt;"><strong>3.</strong></span>
@@ -306,3 +306,106 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
+<!-- --------------------------------------- FAQ 1.3 --------------------------------------- -->
+<p><a id="FAQ_G1"></a></p>
+<p>&nbsp;</p>
+
+<!-- Buttons-->
+<h5 style="text-align: center;">
+    <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i>
+        <span>&nbsp;Back to top</span>
+    </a>
+    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
+    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
+</h5>
+<!-- Header -->
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>1.1. How do I grade in TestVision?</strong></h4>
+</div>
+<!-- Instructie -->
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;">
+    <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
+        <tbody>
+            <!-- stap 1 -->
+            <tr style="height: auto;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
+                        <span style="font-size: 14pt;">1.</span>
+                    </strong></td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong>
+                    Go to the <span style="text-decoration: underline;">Grading</span> menu
+                </strong></td>
+            </tr>
+            <tr style="height: 201px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
+                        <span style="font-size: 14pt;">&nbsp;</span>
+                    </strong></td>
+                <td style="width: 90%; border-style: hidden; height: auto;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/7632442/preview" alt="grading_menu.png" />
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 2 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>2.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <strong>STAP</strong>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    PLAATJE (OF TEKST)
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 3 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>3.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <strong>STAP</strong>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    PLAATJE (OF TEKST)
+                    <br>
+                    <br>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i>
+        <span>&nbsp;Back to top</span>
+    </a>
+    <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i>
+        <span>&nbsp;Next: PLACEHOLDER</em></span>
+    </a>
+</div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
