Nieuwe final grades wijzigingen (SIS pagina, sit down with icto, etc)

--- a/A-Z/Grades/SIS/submit_retake.html
+++ b/A-Z/Grades/SIS/submit_retake.html
@@ -1,15 +1,25 @@
+<!-- Anchor link -->
 <p><a id="topmenu"></a></p>
+
+<!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a> <a class="btn Button--primary" style="width: 30%; margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Final Grades Homepage</span> </a> <a class="btn Button" style="margin: 5px;" href="#symbols"><span style="color: #ef5625;"><i class="icon-info"></i> &nbsp; <strong>Symbols</strong></span> </a></div>
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
+                <a class="btn Button--primary" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;SIS Homepage</span> </a>
+                <a class="btn Button--primary" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Final Grades Homepage</span> </a>
+                <a class="btn Button" style="margin: 5px;" href="#symbols"><span style="color: #a60f0f;"><i class="icon-info"></i> &nbsp; <strong>Symbols</strong></span> </a></div>
         </div>
     </div>
 </div>
+
+<!-- Titel -->
 <p style="text-align: center;"><a class="btn Button--secondary" style="width: 30%; margin: 5px; margin-right: auto; margin-left: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page"><i class="icon-arrow-left"></i> <span>&nbsp;Back to SIS overview</span> </a></p>
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4><strong>Submit Retake Grades to SIS</strong></h4>
 </div>
+
+<!-- Instructie -->
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-right: 25px;">
     <table style="height: auto; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
         <tbody>
@@ -116,6 +126,7 @@
                     <p><img id="6528771" src="https://canvas.uva.nl/courses/8175/files/6528771/preview" alt="FGT_signingconfirmed.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/6528771" data-api-returntype="File" /></p>
                     <p>&nbsp;</p>
                     <p>If desired, <strong>download</strong> the grade list in the form of a <span style="text-decoration: underline;">PDF file</span>.</p>
+                    <p><a id="symbols"></a></p>
                     <p>&nbsp;</p>
                 </td>
             </tr>
@@ -133,12 +144,6 @@
             </tr>
         </tbody>
     </table>
-</div>
-<p><a id="symbols"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <h4><strong>Summary of symbols</strong></h4>
-</div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="padding-top: 30px; padding-bottom: 30px; padding-right: 25px;">
     <table style="height: auto; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
         <tbody>
             <tr>
@@ -158,5 +163,20 @@
         </tbody>
     </table>
 </div>
+
+<!-- buttons beneden -->
 <p style="text-align: center;"><a class="btn Button--secondary" style="width: 30%; margin: 5px; margin-right: auto; margin-left: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page"><i class="icon-arrow-left"></i> <span>&nbsp;Back to SIS overview</span> </a> <a class="btn Button--button" style="width: 20%; margin: 5px; margin-right: 20px;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 <p>&nbsp;</p>
