--- a/A-Z/Grades/FinalGrades/Final_Grades_22-23.html
+++ b/A-Z/Grades/FinalGrades/Final_Grades_22-23.html
@@ -13,7 +13,7 @@
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-support" target="_blank" rel="noopener"><span style="color: #a60f0f;"><i class="icon-star"></i> &nbsp;<strong>Sit down with ICTO!</strong></span> </a>
                 <a class="btn Button" style="margin: 5px;" href="https://uvasocialsciences.eu.qualtrics.com/jfe/form/SV_6LN3bIFUlzyJ95k" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-compose"></i>
                     <span>&nbsp;</span>Send us your feedback
                 </a>
@@ -75,21 +75,21 @@
 
                         <!-- From Canvas -->
                         <p>
-                            <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
+                            <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
                                 <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">From Canvas</span>
                             </a>
                         </p>
 
                         <!-- Excel import -->
                         <p>
-                            <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
+                            <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
                                 <img style="margin-right: 20px;" id="4498958" src="https://canvas.uva.nl/courses/8175/files/4498958/preview" alt="Excel-Icon.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4498958" data-api-returntype="File" /><span style="color: #000000;">Excel import</span>
                             </a>
                         </p>
 
                         <!-- Insert manually -->
                         <p>
-                            <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
+                            <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
                                 <img style="margin-right: 20px;" id="4570172" src="https://canvas.uva.nl/courses/8175/files/4570172/preview" alt="write by priyanka from the Noun Project.png" width="30" height="33" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570172" data-api-returntype="File" /><span style="color: #000000;">Insert manually</span>
                             </a>
                         </p>
@@ -132,14 +132,14 @@
 
                         <!-- To students -->
                         <p>
-                            <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#publish">
+                            <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#publish">
                                 <img style="margin-right: 18px;" id="4570190" src="https://canvas.uva.nl/courses/8175/files/4570190/preview" alt="people by allex from the Noun Project.png" width="36" height="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570190" data-api-returntype="File" /><span style="color: #000000;">To students</span>
                             </a>
                         </p>
 
                         <!-- To SiS -->
                         <p>
-                            <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page">
+                            <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page">
                                 <img style="margin-right: 24px;" id="4570191" src="https://canvas.uva.nl/courses/8175/files/4570191/preview" alt="noun_sis_3178955.png" width="29" height="36" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570191" data-api-returntype="File" /><span style="color: #000000;">To SiS</span>
                             </a>
                         </p>
@@ -267,19 +267,19 @@
                     </div>
                     <!-- From Canvas -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
                             <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">From Canvas</span>
                         </a>
                     </p>
                     <!-- Excel import -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
                             <img style="margin-right: 20px;" id="4498958" src="https://canvas.uva.nl/courses/8175/files/4498958/preview" alt="Excel-Icon.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4498958" data-api-returntype="File" /><span style="color: #000000;">Excel import</span>
                         </a>
                     </p>
                     <!-- Insert manually -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
                             <img style="margin-right: 20px;" id="4570172" src="https://canvas.uva.nl/courses/8175/files/4570172/preview" alt="write by priyanka from the Noun Project.png" width="30" height="33" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570172" data-api-returntype="File" /><span style="color: #000000;">Insert manually</span>
                         </a>
                     </p>
@@ -341,19 +341,19 @@
                     </div>
                     <!-- From Canvas -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
                             <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">From Canvas</span>
                         </a>
                     </p>
                     <!-- Excel import -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
                             <img style="margin-right: 20px;" id="4498958" src="https://canvas.uva.nl/courses/8175/files/4498958/preview" alt="Excel-Icon.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4498958" data-api-returntype="File" /><span style="color: #000000;">Excel import</span>
                         </a>
                     </p>
                     <!-- Insert manually -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
                             <img style="margin-right: 20px;" id="4570172" src="https://canvas.uva.nl/courses/8175/files/4570172/preview" alt="write by priyanka from the Noun Project.png" width="30" height="33" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570172" data-api-returntype="File" /><span style="color: #000000;">Insert manually</span>
                         </a>
                     </p>
@@ -413,19 +413,19 @@
                     </div>
                     <!-- From Canvas -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-canvas">
                             <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">From Canvas</span>
                         </a>
                     </p>
                     <!-- Excel import -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#from-excel">
                             <img style="margin-right: 20px;" id="4498958" src="https://canvas.uva.nl/courses/8175/files/4498958/preview" alt="Excel-Icon.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4498958" data-api-returntype="File" /><span style="color: #000000;">Excel import</span>
                         </a>
                     </p>
                     <!-- Insert manually -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#add-manually">
                             <img style="margin-right: 20px;" id="4570172" src="https://canvas.uva.nl/courses/8175/files/4570172/preview" alt="write by priyanka from the Noun Project.png" width="30" height="33" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570172" data-api-returntype="File" /><span style="color: #000000;">Insert manually</span>
                         </a>
                     </p>
@@ -572,13 +572,13 @@
                     </div>
                     <!-- To students -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#publish">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#publish">
                             <img style="margin-right: 18px;" id="4570190" src="https://canvas.uva.nl/courses/8175/files/4570190/preview" alt="people by allex from the Noun Project.png" width="36" height="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570190" data-api-returntype="File" /><span style="color: #000000;">To students</span>
                         </a>
                     </p>
                     <!-- To SiS -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page">
                             <img style="margin-right: 24px;" id="4570191" src="https://canvas.uva.nl/courses/8175/files/4570191/preview" alt="noun_sis_3178955.png" width="29" height="36" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570191" data-api-returntype="File" /><span style="color: #000000;">To SiS</span>
                         </a>
                     </p>
@@ -647,13 +647,13 @@
                     </div>
                     <!-- To students -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#publish">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#publish">
                             <img style="margin-right: 18px;" id="4570190" src="https://canvas.uva.nl/courses/8175/files/4570190/preview" alt="people by allex from the Noun Project.png" width="36" height="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570190" data-api-returntype="File" /><span style="color: #000000;">To students</span>
                         </a>
                     </p>
                     <!-- To SiS -->
                     <p>
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page">
                             <img style="margin-right: 24px;" id="4570191" src="https://canvas.uva.nl/courses/8175/files/4570191/preview" alt="noun_sis_3178955.png" width="29" height="36" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570191" data-api-returntype="File" /><span style="color: #000000;">To SiS</span>
                         </a>
                     </p>
